--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>com.sap.gtt.v2</groupId>
     <artifactId>gtt-v2-parent-pom</artifactId>
-    <version>[2.3.0,3.0.0)</version>
+    <version>[2.4.0, 2.6.0)</version>
   </parent>
 
   <artifactId>gtt-v2-core-metadata-service</artifactId>
